Second set of changes

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <head>
 	<title>Todo</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
+	<link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
 </head>
 <body>
 <div>
@@ -9,7 +10,7 @@
 <button id="add-button">Create</button>
 
 <form>
-	<input type="text" id="add-field">
+	<input type="text" id="add-field" maxlength="25">
 </form>
 
 <button id="delete-button">Delete All</button>
