--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	<title>Todo List</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
+<!--	<script src="/node_modules/@webcomponents/webcomponentsjs/webcomponents-loader.js"></script> -->
 </head>
 <body>
 	<div class="container">
@@ -21,7 +22,6 @@
 			</ul>
 	 </div>
 </div>
-
-	</body>
+</body>
 <script src="script.js" type="module"></script>
 </html>
