--- a/index.html
+++ b/index.html
@@ -8,18 +8,7 @@
 <body>
 	<div class="container">
 		<div class="content">
-			<div class="todo-interactions">
-			<h1>Todo List</h1>
-				<button id="add-button">Create</button>
-
-				<form>
-					<input type="text" id="add-field" maxlength="22">
-				</form>
-
-				<button id="delete-button">Delete All</button>
-		  </div>
-			<ul id="item-list">
-			</ul>
+				<list-elements></list-elements>
 	 </div>
 </div>
 </body>
